--- a/package.json
+++ b/package.json
@@ -13,16 +13,24 @@
     "@clerk/nextjs": "^6.9.6",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.0.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@types/react-big-calendar": "^1.16.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.482.0",
     "moment": "^2.30.1",
     "next": "15.0.3",
     "prisma": "^6.0.1",
     "react": "^18",
     "react-big-calendar": "^1.16.3",
     "react-calendar": "^5.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.0",
     "recharts": "^2.14.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "zod": "^3.24.0"
   },
